5 - Notebooks e Data/1 - Análises numéricas/Arquivos David/Atualizados/logDicas-master/data/2019-1/222/users/4060/executions/1643_2447.log
== TEST (2019-04-13 23:19:26) 
-- CODE:
preco=flot(input("preco: "))
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    preco=flot(input())
NameError: name 'flot' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-13 23:19:35) 
-- CODE:
preco=float(input("preco: "))
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    preco=flot(input())
NameError: name 'flot' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-13 23:20:21) 
-- CODE:
preco=float(input("preco: "))
pagamento=float(input("pagamento: "))
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    preco=flot(input())
NameError: name 'flot' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-13 23:26:25) 
-- CODE:
preco=float(input("preco: "))
pagamento=float(input("pagamento: "))
if(preco>pagamento):
	men="falta", (preco-pagamanto)
else:
	men="troco", (pagamento-preco)
print(men)	
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 4, in <module>
    men="falta", (preco-pagamanto)
NameError: name 'pagamanto' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-13 23:27:51) 
-- CODE:
preco=float(input("preco: "))
pagamento=float(input("pagamento: "))
if(preco>pagamento):
	men='falta' (preco-pagamanto)
else:
	men='troco de' (pagamento-preco)
print(men)	
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 4, in <module>
    men='falta' (preco-pagamanto)
NameError: name 'pagamanto' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-13 23:27:56) 
-- CODE:
preco=float(input("preco: "))
pagamento=float(input("pagamento: "))
if(preco>pagamento):
	men='falta' (preco-pagamanto)
else:
	men='troco de' (pagamento-preco)
print(men)	
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 4, in <module>
    men='falta' (preco-pagamanto)
NameError: name 'pagamanto' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-13 23:28:17) 
-- CODE:
preco=float(input("preco: "))
pagamento=float(input("pagamento: "))
if(preco>pagamento):
	men='falta' (preco-pagamanto)
else:
	men='troco de' (pagamento-preco)
print(men)	
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 4, in <module>
    men='falta' (preco-pagamanto)
NameError: name 'pagamanto' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-13 23:28:54) 
-- CODE:
preco=float(input("preco: "))
pagamento=float(input("pagamento: "))
if(preco>pagamento):
	men="falta" (preco-pagamanto)
else:
	men="troco de" (pagamento-preco)
print(men)	
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 4, in <module>
    men="falta" (preco-pagamanto)
NameError: name 'pagamanto' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-13 23:29:07) 
-- CODE:
preco=float(input("preco: "))
pagamento=float(input("pagamento: "))
if(preco>pagamento):
	men="falta" (preco-pagamanto)
else:
	men="troco de" (pagamento-preco)
print(men)	
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 4, in <module>
    men="falta" (preco-pagamanto)
NameError: name 'pagamanto' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-13 23:29:29) 
-- CODE:
preco=float(input("preco: "))
pagamento=float(input("pagamento: "))
if(preco>pagamento):
	men="falta", (preco-pagamanto)
else:
	men="troco de", (pagamento-preco)
print(men)	
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 4, in <module>
    men="falta", (preco-pagamanto)
NameError: name 'pagamanto' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-13 23:30:06) 
-- CODE:
preco=float(input("preco: "))
pagamento=float(input("pagamento: "))
if(preco>pagamento):
	men="falta"+ (preco-pagamanto)
else:
	men="troco de"+ (pagamento-preco)
print(men)	
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 4, in <module>
    men="falta"+ (preco-pagamanto)
NameError: name 'pagamanto' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-13 23:30:28) 
-- CODE:
preco=float(input("preco: "))
pagamento=float(input("pagamento: "))
if(preco>pagamento):
	men="falta"+ (preco-pagamanto)
else:
	men="troco de"+ (pagamento-preco)
print(men)	
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 4, in <module>
    men="falta"+ (preco-pagamanto)
NameError: name 'pagamanto' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-13 23:31:12) 
-- CODE:
preco=float(input("preco: "))
pagamento=float(input("pagamento: "))
if(preco>pagamento):
	men="falta"+ (preco-pagamanto)
else:
	men="troco de"+ (pagamento-preco)
print(round(men, 2))	
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 4, in <module>
    men="falta"+ (preco-pagamanto)
NameError: name 'pagamanto' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-13 23:31:48) 
-- CODE:
preco=float(input("preco: "))
pagamento=float(input("pagamento: "))
if(preco>pagamento):
	men="falta", (preco-pagamanto)
else:
	men="troco de", (pagamento-preco)
print(men)	
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 4, in <module>
    men="falta", (preco-pagamanto)
NameError: name 'pagamanto' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-13 23:32:44) 
-- CODE:
preco=float(input("preco: "))
pagamento=float(input("pagamento: "))
if(preco>pagamento):
	men="falta", (preco-pagamanto)
else:
	men="troco de", (pagamento-preco)
print(men)	
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 4, in <module>
    men="falta", (preco-pagamanto)
NameError: name 'pagamanto' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-13 23:33:52) 
-- CODE:
preco=float(input("preco: "))
pagamento=float(input("pagamento: "))
if(preco>pagamento):
	men="falta", (preco-pagamento)
else:
	men="troco de", (pagamento-preco)
print(men)	
-- OUTPUT:
('falta', 26.0)
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-13 23:34:50) 
-- CODE:
preco=float(input("preco: "))
pagamento=float(input("pagamento: "))
if(preco>pagamento):
	men="falta" 
	cont=(preco-pagamento)
else:
	men="troco de", (pagamento-preco)
print(men)	
-- OUTPUT:
falta
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-13 23:35:20) 
-- CODE:
preco=float(input("preco: "))
pagamento=float(input("pagamento: "))
if(preco>pagamento):
	men="falta" 
	cont=(preco-pagamento)
else:
	men="troco de", (pagamento-preco)
print(men,cont)	
-- OUTPUT:
falta 26.0
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-13 23:36:43) 
-- CODE:
preco=float(input("preco: "))
pagamento=float(input("pagamento: "))
if(preco>pagamento):
	men="falta" 
	cont=(preco-pagamento)
else:
	men="troco de", (pagamento-preco)
print(men,round(cont, 2))	
-- OUTPUT:
falta 26.0
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-13 23:36:52) 
-- CODE:
preco=float(input("preco: "))
pagamento=float(input("pagamento: "))
if(preco>pagamento):
	men="falta" 
	cont=(preco-pagamento)
else:
	men="troco de", (pagamento-preco)
print(men,round(cont, 2))	
-- EXECUTION TIME:
0.206931
-- TEST CASE 1:
---- input:
38.0
12.0
---- correct output:
Falta 26.0
---- user output:
falta 26.0
-- TEST CASE 2:
---- input:
32.0
60.0
---- correct output:
Troco de 28.0
---- user output:

-- TEST CASE 3:
---- input:
516.0
516.0
---- correct output:
Troco de 0.0
---- user output:

-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-13 23:36:55) 
-- CODE:
preco=float(input("preco: "))
pagamento=float(input("pagamento: "))
if(preco>pagamento):
	men="falta" 
	cont=(preco-pagamento)
else:
	men="troco de", (pagamento-preco)
print(men,round(cont, 2))	
-- OUTPUT:
falta 26.0
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-13 23:38:06) 
-- CODE:
preco=float(input("preco: "))
pagamento=float(input("pagamento: "))
if(preco>pagamento):
	men="falta" 
	cont=(preco-pagamento)
else:
	men="troco de"
	cont=(pagamento-preco)
print(men,round(cont, 2))	
-- EXECUTION TIME:
0.211434
-- TEST CASE 1:
---- input:
38.0
12.0
---- correct output:
Falta 26.0
---- user output:
falta 26.0
-- TEST CASE 2:
---- input:
32.0
60.0
---- correct output:
Troco de 28.0
---- user output:
troco de 28.0
-- TEST CASE 3:
---- input:
516.0
516.0
---- correct output:
Troco de 0.0
---- user output:
troco de 0.0
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-13 23:38:13) 
-- CODE:
preco=float(input("preco: "))
pagamento=float(input("pagamento: "))
if(preco>pagamento):
	men="falta" 
	cont=(preco-pagamento)
else:
	men="troco de"
	cont=(pagamento-preco)
print(men,round(cont, 2))	
-- OUTPUT:
falta 26.0
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-13 23:39:29) 
-- CODE:
preco=float(input("preco: "))
pagamento=float(input("pagamento: "))
if(preco>pagamento):
	men="falta" 
	cont=(preco-pagamento)
else:
	men="troco de"
	cont=(pagamento-preco)
print(men,round(cont, 2))	
-- OUTPUT:
falta 26.0
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-13 23:39:34) 
-- CODE:
preco=float(input("preco: "))
pagamento=float(input("pagamento: "))
if(preco>pagamento):
	men="falta" 
	cont=(preco-pagamento)
else:
	men="troco de"
	cont=(pagamento-preco)
print(men,round(cont, 2))	
-- EXECUTION TIME:
0.198517
-- TEST CASE 1:
---- input:
38.0
12.0
---- correct output:
Falta 26.0
---- user output:
falta 26.0
-- TEST CASE 2:
---- input:
32.0
60.0
---- correct output:
Troco de 28.0
---- user output:
troco de 28.0
-- TEST CASE 3:
---- input:
516.0
516.0
---- correct output:
Troco de 0.0
---- user output:
troco de 0.0
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-13 23:40:11) 
-- CODE:
preco=float(input("preco: "))
pagamento=float(input("pagamento: "))
if(preco>pagamento):
	men="Falta" 
	cont=(preco-pagamento)
else:
	men="Troco de"
	cont=(pagamento-preco)
print(men,round(cont, 2))	
-- EXECUTION TIME:
0.185268
-- TEST CASE 1:
---- input:
38.0
12.0
---- correct output:
Falta 26.0
---- user output:
Falta 26.0
-- TEST CASE 2:
---- input:
32.0
60.0
---- correct output:
Troco de 28.0
---- user output:
Troco de 28.0
-- TEST CASE 3:
---- input:
516.0
516.0
---- correct output:
Troco de 0.0
---- user output:
Troco de 0.0
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-15 13:42:01) 
-- CODE:
preco=float(input("preco: "))
pagamento=float(input("pagamento: "))
if(preco>pagamento):
	men="Falta" 
	cont=(preco-pagamento)
else:
	men="Troco de"
	cont=(pagamento-preco)
print(men,round(cont, 2))	
-- OUTPUT:
Falta 26.0
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
